Re-add header height temporarily to avoid load shifting

--- a/design/less/main.less
+++ b/design/less/main.less
@@ -119,6 +119,7 @@ body {
 header {
     background: @grayDark;
     padding: 30px 0;
+    height: 90px;
     color: #fff;
 
     h1 {
